# keycloak-protobuf

./: .gitignore  protoc-go.sh  protoc-java.sh  protoc-rust.sh
.github/workflows/: protoc.yml
golang/keycloak/: go.mod  keycloak.pb.go  keycloak_grpc.pb.go
java/keycloak/: .gitignore  keycloak-template.xml  pom.xml
rust/hub1989-protobuf-keycloak/: .gitignore  Cargo.toml  README.md  build.rs
rust/hub1989-protobuf-keycloak/protos/: keycloak.proto
rust/hub1989-protobuf-keycloak/src/: lib.rs
rust/hub1989-protobuf-keycloak/src/protogen/: keycloak.rs
