[package]
name = "hub1989-protobuf-keycloak"
version = "0.0.1"
edition = "2021"
description = "Keycloak proto API"
categories = ["development-tools"]
keywords = ["hub1989", "keycloak", "grpc"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
tonic = "0.9.2"
prost = "0.11.9"
grpc-build-core = "0.2.0"

[build-dependencies]
grpc-build = "5.0.0"

[lib]
path = "src/lib.rs"
name = "hub1989_keycloak"
